feat: complete gatt hierarchy